Change app to TODO
* Updated OpenAPI spec aand SDK
* Auth from cookie
* Pages and components to support TODO app
* Modal over route for todo details
* Using page router for extra presentation flexibility
