# src/gen/api/models/index.ts
@@ -3,7 +3,12 @@
 export * from './LoginPost401Response';
 export * from './LogoutGet200Response';
 export * from './Todo';
+export * from './TodoListing';
 export * from './TodosGet200Response';
-export * from './TodosTodoIdGet200Response';
+export * from './TodosGetById200Response';
+export * from './TodosPost200Response';
+export * from './TodosPostRequest';
+export * from './TodosPutById200Response';
+export * from './TodosPutByIdRequest';
 export * from './User';
 export * from './UserSecurity';
